--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,11 @@ default: &default
 
 development:
   <<: *default
-  database: ruby-getting-started_development
+  database: d7filv3i15bmk4
+  username: qlnrrofeybrvwy
+  password: tiwC_yFiX0nfCSkbLRvjA7iphs
+  host: ec2-54-83-27-26.compute-1.amazonaws.com
+  port: 5432
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +61,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ruby-getting-started_test
+  database: d7filv3i15bmk4
+  username: qlnrrofeybrvwy
+  password: tiwC_yFiX0nfCSkbLRvjA7iphs
+  host: ec2-54-83-27-26.compute-1.amazonaws.com
+  port: 5432
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +88,11 @@ test:
 #
 production:
   <<: *default
-  database: ruby-getting-started_production
-  username: ruby-getting-started
-  password: <%= ENV['RUBY-GETTING-STARTED_DATABASE_PASSWORD'] %>
+  #database: ruby-getting-started_production
+  #username: ruby-getting-started
+  #password: <%= ENV['RUBY-GETTING-STARTED_DATABASE_PASSWORD'] %>
+  database: d7filv3i15bmk4
+  username: qlnrrofeybrvwy
+  password: tiwC_yFiX0nfCSkbLRvjA7iphs
+  host: ec2-54-83-27-26.compute-1.amazonaws.com
+  port: 5432
