--- a/config/database.yml
+++ b/config/database.yml
@@ -23,10 +23,10 @@ default: &default
 
 development:
   <<: *default
-  database: d7filv3i15bmk4
-  username: qlnrrofeybrvwy
-  password: tiwC_yFiX0nfCSkbLRvjA7iphs
-  host: ec2-54-83-27-26.compute-1.amazonaws.com
+  database: <%= ENV['database'] %>
+  username: <%= ENV['username'] %>
+  password: <%= ENV['password'] %>
+  host: <%= ENV['host'] %>
   port: 5432
 
   # The specified database role being used to connect to postgres.
@@ -61,10 +61,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: d7filv3i15bmk4
-  username: qlnrrofeybrvwy
-  password: tiwC_yFiX0nfCSkbLRvjA7iphs
-  host: ec2-54-83-27-26.compute-1.amazonaws.com
+  database: <%= ENV['database'] %>
+  username: <%= ENV['username'] %>
+  password: <%= ENV['password'] %>
+  host: <%= ENV['host'] %>
   port: 5432
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -91,8 +91,8 @@ production:
   #database: ruby-getting-started_production
   #username: ruby-getting-started
   #password: <%= ENV['RUBY-GETTING-STARTED_DATABASE_PASSWORD'] %>
-  database: d7filv3i15bmk4
-  username: qlnrrofeybrvwy
-  password: tiwC_yFiX0nfCSkbLRvjA7iphs
-  host: ec2-54-83-27-26.compute-1.amazonaws.com
+  database: <%= ENV['database'] %>
+  username: <%= ENV['username'] %>
+  password: <%= ENV['password'] %>
+  host: <%= ENV['host'] %>
   port: 5432
